--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
  <title>Index Page</title>
 </head>
 <body>
-<div id="Navbar"></div>
+<div id="Navbar">
+    
+</div>
 <div id="footer"></div>
 </body>
 <script src="./index.js"></script>
