--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="./styles/index.css">
  <title>Index Page</title>
 </head>
 <body>
-<div id="Navbar"></div>
+<div id="nav"></div>
 <div id="slider"><img src="Be Pretty.png" alt=""></div>
 <div id="slider-2"><img src="https://files.myglamm.com/site-images/original/ULt2240x614.jpg" alt=""></div>
 <div id="slider-3"><img src="https://files.myglamm.com/site-images/original/2240x614-Gifting-Store-KV-refresh.jpg" alt=""></div>
