--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Style/signup.css">
+    <link rel="stylesheet" href="./loginstyle/signup.css">
     <title>Document</title>
     
 
@@ -37,5 +37,5 @@
      
     </div>
 </body>
-<script src="./Script/signup.js"></script>
+<script src="./loginscript/signup.js"></script>
 </html>
