--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="index.css">
  <link rel="stylesheet" href="./styles/navbar.css">
+ <link rel="stylesheet" href="./styles/footer.css">
  <title>Index Page</title>
 </head>
 <body>
-
 <div id="nav"></div>
 <div id="slider"><img src="Be Pretty.png" alt=""></div>
 <div id="slider-2"><img src="https://files.myglamm.com/site-images/original/ULt2240x614.jpg" alt=""></div>
@@ -68,7 +68,6 @@
  <div></div>
  <div></div>
  <div></div>
-
 </div>
 <div id="footer"></div>
 </body>
