--- a/index.html
+++ b/index.html
@@ -63,11 +63,64 @@
 </div>
 <h1>BEST SELLERS</h1>
 <div id="slider-12">
- <div><img src="https://files.myglamm.com/site-images/400x400/OTTP-(1).jpg" alt=""></div>
- <div></div>
- <div></div>
- <div></div>
+ <div><img src="https://files.myglamm.com/site-images/400x400/OTTP-(1).jpg" alt="">
+ <h3>MyGlamm LIT Liquid Matte Lipstick - OTP</h3>
+ <p>oringa Oil Enriched Matte Lipstick</p>
+ <p><h4>4.9  &#9733 </h4> | 16083 ratings</p>
+ <h3>₹ 395</h3>
+ </div>
+ <div><img src="https://files.myglamm.com/site-images/800x800/PPY1_1.jpg" alt="">
+  <h3>MANISH MALHOTRA SOFT MATTE LIPSTICK</h3>
+  <p>Hydrating Long-wear Lipstick</p>
+  <p><h4>4.9  &#9733 </h4> | 748 ratings</p>
+  <h3>₹ 523</h3>
+  </div>
+ <div>
+  <img src="https://files.myglamm.com/site-images/400x400/Facewash_3.jpg" alt="">
+  <h3>MyGlamm WIPEOUT Germ Killing Face Wash</h3>
+  <p>Tea Tree Oil & Vitamin E-infused Face Wash</p>
+  <p><h4>4.9  &#9733 </h4> | 743 ratings</p>
+  <h3>₹ 72</h3>
+ </div>
+ <div>
+  <img src="https://files.myglamm.com/site-images/400x400/Artboard-1-(1)-(1).jpg" alt="">
+  <h3>MyGlamm SUPERFOO</h3>
+  <p>Long-Wear Smudge-Pro</p>
+  <p><h4>5  &#9733 </h4> | 1952 ratings</p>
+  <h3>₹ 280</h3>
+ </div>
 </div>
+
+<h1>WATCH LOVE SHOP</h1>
+ <div id="slider-13">
+  <div><h4>Show your look</h4></div>
+  <div><p>Upload your favorite makeup looks on instagtam with  #myglamm  for a chance to featured!</p></div>
+  <div><p>Follow us on Instagtam #myglamm</p></div>
+ </div>
+</div>
+
+<div id="slider-14">
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/18328911217032036_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/17923552244616199_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/17906527727669011_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/18202746724206983_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/18059629792347168_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/17916999323529474_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/17963178956053153_0.mp4.jpg" alt=""></div>
+ <div><img src="https://m.photoslurp.com/vt720/pslurpmedia.s3.amazonaws.com/instagram-business/17879957072765088_0.mp4.jpg" alt=""></div>
+</div>
+
+<div id="slider-15"><img src="https://files.myglamm.com/site-images/original/RE2240x614.jpg" alt=""></div>
+
+<div id="slider-16"><img src="https://files.myglamm.com/site-images/original/disclaimer-mgp_1.png" alt=""></div>
+
+<div id="slider-17"><video autoplay muted loop><source src="https://www.myglamm.com/images/TellMyGlammWhatYouWant.webm" type="video/webm"/></video>
+<h1>BRAND STORY</h1>
+<p>Backed by one of Europe's largest natural beauty companies, MyGlamm collaborated with global experts and makeup artists to bring about exciting innovation in makeup to accomplish our single, focused goal – make looking glamorous effortless!
+ Know More</p>
+<img src="https://files.myglamm.com/site-images/original/ico-play.png" alt="">
+</div>
+
 <div id="footer"></div>
 </body>
 <script type="module" src="./index.js"></script>
