--- a/Lipstick.html
+++ b/Lipstick.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Lipstick</title>
+    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
 </head>
 <body>
     <div id="nav"></div>
