--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./loginstyle/signup.css">
     <title>Document</title>
-    
-
+    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
 </head>
 <body>
     <div id="container">
