--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <script src="https://kit.fontawesome.com/24c494a6b6.js"
+    crossorigin="anonymous">
+    </script>
  <link rel="stylesheet" href="index.css">
  <link rel="stylesheet" href="./styles/navbar.css">
  <link rel="stylesheet" href="./styles/footer.css">
