--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <div><img src="https://files.myglamm.com/site-images/original/700x488lgl_1.jpg" alt="">
  <h3>LIT Matte About It Lip Color</h3></div>
 </div>
-<h1><h1>ESSENTIAL BUDGET BUYS</h1>
+<h1>ESSENTIAL BUDGET BUYS</h1>
 <div id="slider-7">
  <div><img src="https://files.myglamm.com/site-images/original/499-desk.jpg" alt="">
  <h3> <h3>Under 499 Store</h3></div>
