Added cart functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <link rel="stylesheet" href="./styles/navbar.css">
  <link rel="stylesheet" href="./styles/footer.css">
  <title>Index Page</title>
- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+<link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
 </head>
 <body>
 <div id="nav"></div>
@@ -72,27 +72,27 @@
  <div><img src="https://files.myglamm.com/site-images/400x400/OTTP-(1).jpg" alt="">
  <h3>MyGlamm LIT Liquid Matte Lipstick - OTP</h3>
  <p>oringa Oil Enriched Matte Lipstick</p>
- <p><h4>4.9  &#9733 </h4> | 16083 ratings</p>
+ <p><h4>4.9  &#9733  | 16083 ratings</h4></p>
  <h3>₹ 395</h3>
  </div>
  <div><img src="https://files.myglamm.com/site-images/800x800/PPY1_1.jpg" alt="">
   <h3>MANISH MALHOTRA SOFT MATTE LIPSTICK</h3>
   <p>Hydrating Long-wear Lipstick</p>
-  <p><h4>4.9  &#9733 </h4> | 748 ratings</p>
+  <p><h4>4.9  &#9733 | 748 ratings</h4> </p>
   <h3>₹ 523</h3>
   </div>
  <div>
   <img src="https://files.myglamm.com/site-images/400x400/Facewash_3.jpg" alt="">
   <h3>MyGlamm WIPEOUT Germ Killing Face Wash</h3>
   <p>Tea Tree Oil & Vitamin E-infused Face Wash</p>
-  <p><h4>4.9  &#9733 </h4> | 743 ratings</p>
+  <p><h4>4.9  &#9733  | 743 ratings</h4> </p>
   <h3>₹ 72</h3>
  </div>
  <div>
   <img src="https://files.myglamm.com/site-images/400x400/Artboard-1-(1)-(1).jpg" alt="">
   <h3>MyGlamm SUPERFOO</h3>
   <p>Long-Wear Smudge-Pro</p>
-  <p><h4>5  &#9733 </h4> | 1952 ratings</p>
+  <p><h4>5  &#9733 | 1952 ratings </h4></p>
   <h3>₹ 280</h3>
  </div>
 </div>
