--- a/Lipstick.html
+++ b/Lipstick.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/24c494a6b6.js"
+    crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <title>Lipstick</title>
+<link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+    <title>Lipstick Page</title>
 </head>
 <body>
+    <div id="nav"></div>
      <h1>LIPSTICKS</h1>
      <div id="container"></div>
 
@@ -214,10 +221,9 @@
 
      </div>
 
-     
-
+     <div id="footer"></div>
     
 </body>
 
 </html>
-<script src="./Lipstick.js"></script>
+<script type="module" src="./Lipstick.js"></script>
