--- a/facewash.html
+++ b/facewash.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/24c494a6b6.js"
+    crossorigin="anonymous">
+    </script>
+
     <link rel="stylesheet" href="./shampoo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <title>FaceWash</title>
+    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+    <title>FaceWash Page</title>
 </head>
 <body>
+    <div id="nav"></div>
     <h1>FACEWASH</h1>
     <div id="container"></div>
 
@@ -52,6 +60,7 @@
                 Using the right face wash that is gentle on the skin but tough on make-up, sebum and impurities is the best way to go for an ideal cleansing process. And to keep you sorted MyGlamm has got a range of face washes that your skin is going to love. When we say best face wash, we mean it. We offer vegan face wash and cruelty-free face wash as we’re PETA approved, so you can use any of our products guilt-free. 
         </div>
     </div>
+    <div id="footer"></div>
 </body>
 </html>
-<script src="facewash.js"></script>
+<script type="module" src="facewash.js"></script>
