--- a/cart/cart.html
+++ b/cart/cart.html
@@ -74,7 +74,7 @@
     </main>
    
     <div id="total_value">
-        <p>You will earn <b>MyGlamXO Points</b> as cashback on this order</p>
+        <p>You will earn <b>Be Pretty Points</b> as cashback on this order</p>
         <div id="total_amount">
             <p id="total">GRAND TOTAL</p>
         </div>
