added files CSS edit

--- a/shampoo2.html
+++ b/shampoo2.html
@@ -9,9 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/766965e798.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/24c494a6b6.js"
-    crossorigin="anonymous">
-    </script>
+    <script src="https://kit.fontawesome.com/24c494a6b6.js"crossorigin="anonymous"></script>
      <link rel="stylesheet" href="./styles/navbar.css">
      <link rel="stylesheet" href="./styles/footer.css">
      <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
