--- a/cart/cart.html
+++ b/cart/cart.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./cart.css">
-    <title>Shopping Bag</title>
+    <title>Cart Page</title>
     <link rel="shortcut icon" href="https://document-export.canva.com/VBLkY/DAFRokVBLkY/7/thumbnail/0001.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAQYCGKMUHWDTJW6UD%2F20221110%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20221110T151047Z&X-Amz-Expires=76697&X-Amz-Signature=3f129bd57b32b9905ead01c40c0d28b969fdf5c2f1cbf3ece59f8363de017a41&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2011%20Nov%202022%2012%3A29%3A04%20GMT" type="image/x-icon">
 </head>
 <body>
