--- a/Lipstick2.html
+++ b/Lipstick2.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Lipstick2.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="./styles/navbar.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/766965e798.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/24c494a6b6.js"
-    crossorigin="anonymous">
-    </script>
-    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/Lipstick2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/766965e798.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/24c494a6b6.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
     <title>Lipstick Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="nav"></div>
     <div id="main">
-        <div id="div1"></div>
-        <div id="div2">
-        </div>
+      <div id="div1"></div>
+      <div id="div2"></div>
     </div>
-    
-    
+
     <div id="footer"></div>
-</body>
+  </body>
 </html>
-<script type="module" src="./Lipstick2.js"></script>
+<script type="module" src="./script/Lipstick2.js"></script>
