--- a/cream.html
+++ b/cream.html
@@ -7,13 +7,13 @@
     <script src="https://kit.fontawesome.com/24c494a6b6.js"
     crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="./shampoo.css">
+    <link rel="stylesheet" href="./styles/shampoo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty.png" type="image/x-icon">
     <title>Cream Page</title>
 </head>
 <body>
@@ -76,4 +76,4 @@
     <div id="footer"></div>
 </body>
 </html>
-<script type="module" src="cream.js"></script>
+<script type="module" src="./script/cream.js"></script>
