--- a/payment.html
+++ b/payment.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment</title>
-    <link rel="stylesheet" href="./payment.css" />
-    
+    <link rel="stylesheet" href="./styles/payment.css" />
   </head>
   <body>
     <div class="header">
       <a href="">
-        <img
-          src="http://127.0.0.1:5500/Be%20Pretty.png"
-          alt=""
-        />
+        <img src="./Logo and Icon/Be Pretty.png" alt="" />
       </a>
     </div>
     <p>Payment</p>
@@ -46,7 +42,7 @@
           <h3 id="total">Rs.3000.00</h3>
         </div>
         <br />
-        <h3 style="border-bottom:3px solid red">New Card</h3>
+        <h3 style="border-bottom: 3px solid red">New Card</h3>
         <div id="form">
           <form action="">
             <div>
@@ -68,9 +64,13 @@
     </div>
     <hr />
     <div id="bottom">
-     <img style="width:100px"  src="http://127.0.0.1:5500/Be%20Pretty.png" alt="">
-     <h1>Be Pretty</h1>
+      <img
+        style="width: 100px"
+        src="http://127.0.0.1:5500/Be%20Pretty.png"
+        alt=""
+      />
+      <h1>Be Pretty</h1>
     </div>
   </body>
-  <script type="module" src="./payment.js"></script>
+  <script type="module" src="./script/payment.js"></script>
 </html>
