--- a/signin.html
+++ b/signin.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./loginstyle/sigin.css">
+    <link rel="stylesheet" href="./styles/sigin.css">
     <title>Document</title>
-    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
 </head>
 <body>
     <div id="container">
@@ -34,5 +34,5 @@
      
     </div>
 </body>
-<script src="./loginscript/signin.js"></script>
+<script src="./script/signin.js"></script>
 </html>
