--- a/facewash.html
+++ b/facewash.html
@@ -8,13 +8,13 @@
     crossorigin="anonymous">
     </script>
 
-    <link rel="stylesheet" href="./shampoo.css">
+    <link rel="stylesheet" href="./styles/shampoo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
     <title>FaceWash Page</title>
 </head>
 <body>
@@ -63,4 +63,4 @@
     <div id="footer"></div>
 </body>
 </html>
-<script type="module" src="facewash.js"></script>
+<script type="module" src="/script/facewash.js"></script>
