--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <script src="https://kit.fontawesome.com/24c494a6b6.js"
-    crossorigin="anonymous">
-    </script>
- <link rel="stylesheet" href="index.css">
- <link rel="stylesheet" href="./index.css">
+   crossorigin="anonymous"></script>
  <link rel="stylesheet" href="./styles/navbar.css">
+ <link rel="stylesheet" href="./styles/index.css">
  <link rel="stylesheet" href="./styles/footer.css">
  <title>Index Page</title>
-<link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+<link rel="shortcut icon" href="./Logo and Icon/Be Pretty.png" type="image/x-icon">
 </head>
 <body>
 <div id="nav"></div>
-<div id="slider"><img src="https://document-export.canva.com/VBLkY/DAFRokVBLkY/7/thumbnail/0001.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAQYCGKMUHWDTJW6UD%2F20221110%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20221110T151047Z&X-Amz-Expires=76697&X-Amz-Signature=3f129bd57b32b9905ead01c40c0d28b969fdf5c2f1cbf3ece59f8363de017a41&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2011%20Nov%202022%2012%3A29%3A04%20GMT" alt=""></div>
+<div id="slider">
+   <!-- <img src="./Logo and Icon/Be Pretty gif.mp4" alt=""> -->
+
+   <video id="background-video" autoplay loop muted>
+      <source src="./Logo and Icon/Be Pretty gif.mp4" type="video/mp4">
+    </video>
+
+</div>
 <div id="slider-2"><img src="https://files.myglamm.com/site-images/original/ULt2240x614.jpg" alt=""></div>
 <div id="slider-3"><img src="https://files.myglamm.com/site-images/original/2240x614-Gifting-Store-KV-refresh.jpg" alt=""></div>
 <h1>IN THE SPOTLIGHT</h1>
@@ -129,5 +134,5 @@
 
 <div id="footer"></div>
 </body>
-<script type="module" src="./index.js"></script>
+<script type="module" src="./script/index.js"></script>
 </html>
