--- a/facewash.html
+++ b/facewash.html
@@ -21,9 +21,7 @@
     <div id="nav"></div>
     <h1>FACEWASH</h1>
     <div id="container"></div>
-
     <hr>
-
     <div id="footer1">
         <div id="div1">
             <h2 id="heading1">Buy Best Face Washes Online For All Skin Types in India</h2>
@@ -63,4 +61,4 @@
     <div id="footer"></div>
 </body>
 </html>
-<script type="module" src="/script/facewash.js"></script>
+<script type="module" src="./script/facewash.js"></script>
