--- a/shampoo2.html
+++ b/shampoo2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,12 +22,11 @@
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
     <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
-=======
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./shampoo2.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -36,13 +34,13 @@
     <script src="https://kit.fontawesome.com/24c494a6b6.js"crossorigin="anonymous"></script>
      <link rel="stylesheet" href="./styles/navbar.css">
      <link rel="stylesheet" href="./styles/footer.css">
+     <link rel="stylesheet" href="./styles/shampoo2.css">
      <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
->>>>>>> d978b7fe2ba4b3c652820d06610213c8a3d861d3
     <title>Shampoo Page</title>
   </head>
   <body>
     <div id="nav"></div>
-    <div id="main">
+    <div id="main_div">
       <div id="div1"></div>
       <div id="div2"></div>
     </div>
