--- a/Lipstick2.html
+++ b/Lipstick2.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
     ></script>
-    <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
     <title>Lipstick Page</title>
   </head>
   <body>
