--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/cart.css" />
     <title>Shopping Bag</title>
-    <!-- <link rel="shortcut icon" href="" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
   </head>
   <body>
     <header>
