--- a/cream.html
+++ b/cream.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
     <title>Cream Page</title>
 </head>
 <body>
