--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
  <link rel="stylesheet" href="./styles/index.css">
  <link rel="stylesheet" href="./styles/footer.css">
  <title>Index Page</title>
-<link rel="shortcut icon" href="./Logo and Icon/Be Pretty.png" type="image/x-icon">
+<link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
 </head>
 <body>
 <div id="nav"></div>
 <div id="slider">
-   <!-- <img src="./Logo and Icon/Be Pretty gif.mp4" alt=""> -->
+   <img src="./Logo and Icon/Be Pretty gif.mp4" alt="">
 
    <video id="background-video" autoplay loop muted>
       <source src="./Logo and Icon/Be Pretty gif.mp4" type="video/mp4">
