--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/checkout.css" />
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon" />
+
     <title>Check Out</title>
   </head>
 
