--- a/shampoo2.html
+++ b/shampoo2.html
@@ -35,7 +35,7 @@
      <link rel="stylesheet" href="./styles/navbar.css">
      <link rel="stylesheet" href="./styles/footer.css">
      <link rel="stylesheet" href="./styles/shampoo2.css">
-     <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon">
+     <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
     <title>Shampoo Page</title>
   </head>
   <body>
