--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/signup.css">
     <title>Document</title>
-    <!-- <link rel="shortcut icon" href="Be Pretty.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
 </head>
 <body>
     <div id="container">
