--- a/AdminPanel/AddProduct.html
+++ b/AdminPanel/AddProduct.html
@@ -9,9 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="shortcut icon"
+      href="./Logo and Icon/Be Pretty 2.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./styles/admin.css" />
     <link rel="stylesheet" href="./styles/addProduct.css" />
-    <title>AddProduct</title>
+    <title>Admin AddProduct</title>
   </head>
 
   <body>
