--- a/AdminPanel/AdminDashboard.html
+++ b/AdminPanel/AdminDashboard.html
@@ -7,45 +7,17 @@
     
     <link rel="stylesheet" href="./styles/admin.css" />
     <link rel="stylesheet" href="./styles/dashboard.css" />
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
     <!--  CSS for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Document</title>
+    <title>Admin Dashboard</title>
+
   </head>
   <body>
     <div id="body"></div>
-    <!-- <div id="Anav">
-      <img class="logo" src="./scripts/Picsart_2.png" alt="" />
-
-    <input type="text" id="Asearch" placeholder="  Search" /></input>
-     search box 
-    <input type="submit" id="Asearch_button" onclick="Admin_name()"> </input>
-
-      <div class="profile">
-        <img
-          src="https://cdn-icons-png.flaticon.com/128/236/236831.png"
-          class="pro-img"
-        />
-        <p id="admin_name"></p>
-      </div>
-    </div>
-
-    <div id="mySidenav" class="sidenav">
-      <a href="./Dashboard.html" class="icon-a"
-        ><i class="fa fa-dashboard icons"></i> Dashboard</a
-      >
-      <a href="./AddProduct.html" class="icon-a"
-        ><i class="fa fa-list icons"></i> Add Products</a
-      >
-      <a href="./Shampoo.html" class="icon-a"
-        ><i class="fa fa-shopping-bag icons"></i> Products</a
-      >
-      <a href="./Login.html" class="icon-a"
-        ><i class="fa fa-user icons"></i> Login</a
-      >
-    </div> -->
 
     <div id="Acontainer">
       <div id="heading">
