--- a/AdminPanel/Login.html
+++ b/AdminPanel/Login.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/admin.css" />
     <link rel="stylesheet" href="./styles/login.css">
+    <link rel="shortcut icon" href="./Logo and Icon/Be Pretty 2.png" type="image/x-icon">
     <!--  CSS for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Document</title>
+    <title>Admin Login</title>
   </head>
   <body>
     <div id="body"></div>
